--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
 
-  <div id="header"></div>
+  <div id="header">
+    <div id="status-board"></div>
+  </div>
 
   <div id="app">
     <table>
